# reviewbot

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/: architecture.py  base.py  quality.py  security.py
backend/app/api/: health.py  review.py  reviews.py  stats.py
backend/app/core/: aggregator.py  file_selector.py  github_fetcher.py  review_pipeline.py  zip_parser.py
backend/app/db/: models.py  repositories.py  session.py
backend/app/exceptions/: handlers.py
backend/app/middleware/: logging.py  rate_limit.py
backend/app/schemas/: issue.py  review.py  stats.py
backend/tests/: conftest.py  test_agents.py  test_github_fetcher.py  test_review_api.py  test_zip_parser.py
frontend/: .dockerignore  .env.local.example  Dockerfile  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  not-found.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/review/[id]/: page.tsx
frontend/src/components/dashboard/: ReviewsTable.tsx  StatsCards.tsx
frontend/src/components/layout/: Navbar.tsx
frontend/src/components/review/: IssueCard.tsx  IssuesList.tsx  ReviewProgress.tsx  ScoreCard.tsx  UploadForm.tsx
frontend/src/lib/: api.ts  auth.ts  utils.ts
frontend/src/types/: index.ts  next-auth.d.ts
