[project]
name = "reviewbot-backend"
version = "0.1.0"
description = "AI-powered project reviewer backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "python-jose[cryptography]>=3.3.0",
]

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501", "B008", "B904", "E402"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "aiosqlite>=0.20.0",
]
